--- a/UI/WebStore/WebStore.csproj
+++ b/UI/WebStore/WebStore.csproj
@@ -10,13 +10,9 @@
 
   <ItemGroup>
     <Compile Remove="Logs\**" />
-    <Compile Remove="wwwroot\imgs\**" />
     <Content Remove="Logs\**" />
-    <Content Remove="wwwroot\imgs\**" />
     <EmbeddedResource Remove="Logs\**" />
-    <EmbeddedResource Remove="wwwroot\imgs\**" />
     <None Remove="Logs\**" />
-    <None Remove="wwwroot\imgs\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,11 +31,13 @@
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Loggly" Version="5.4.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
+    <PackageReference Include="SimpleMvcSitemap" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\imgs\" />
   </ItemGroup>
 
   <ItemGroup>
