--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -78,5 +78,6 @@
   },
 
   "AllowedHosts": "*",
-  "WebApiURL": "http://localhost:5001"
+  "WebApiURL": "http://localhost:5001",
+  "PageSize": "3"
 }
